sass/_footer.scss
/* Footer */

.footerbar{
  position: relative;
  z-index: 1;

  @include display-flex;
  @include align-items(flex-start);
  @include align-items(center);
  @include justify-content(flex-end);

  padding: 8px 0 0 6px;
  right: 0;

  > li {
    padding: 0 0 0 20px;
  }

  a, label {
    color: $grey-color;
    transition: color .4s;
  }

  a:hover, label:hover {
    color: $freifunk-yellow;
  }

  a.nonexistent {
    color: $grey-color-light !important;
    pointer-events: none;
  }
}

.footerbar li {
  list-style: none;
}

